--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card {
+    @apply bg-white rounded overflow-hidden shadow-lg relative my-4;
+}
+
+.badge {
+    @apply bg-secondary-100 text-secondary-200 font-bold uppercase rounded-full p-2 text-xs absolute top-0 ml-2 mt-2;
+}
+.btn {
+    @apply rounded-full uppercase py-2 px-3 text-xs font-bold cursor-pointer tracking-wider;
+}
