--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .card {
-    @apply bg-white rounded overflow-hidden shadow-lg relative my-4;
+    @apply bg-white rounded overflow-hidden shadow-md relative my-4;
 }
 
 .badge {
